gtk/src/gtk-3.0/_common.scss
/* ... */
/*************
 * Level Bar *
 *************/
levelbar {
  &.horizontal {
    block {
      min-height: 3px;
    }

    &.discrete block {
      margin: 0 1px;
      min-width: 32px;
    }
  }

  &.vertical {
    block {
      min-width: 3px;
    }

    &.discrete block {
      margin: 1px 0;
      min-height: 32px;
    }
  }

  &:backdrop { transition: $backdrop_transition; }

  trough {
    padding: 3px;
    border-radius: 3px;
    border: none;
    @include entry(normal, $c: $base_color);

    &:backdrop { @include entry(backdrop, $c: $base_color); }
    box-shadow: inset 0 0 0 1px $borders_color;
  }

  block {
    border-radius: 3px;

    @mixin block_highlight($c) {
      background-color: $c;

      &:backdrop { background-color: _backdrop_color($c); };
    }

    &.low {
      @include block_highlight($warning_color);
    }

    &.high,
    &:not(.empty) {
      @include block_highlight($neutral_color);
    }

    &.full {
      @include block_highlight($neutral_color);
    }

    &.empty {
      // TODO: this looks kind of ugly
      $_bg: if($variant == "light", $dark_fill, transparentize($dark_fill, .7));
      background-color: $_bg;

      &:backdrop { background-color: transparent; }
    }
  }
}


/****************
 * Print dialog *
*****************/
printdialog {
  paper {
    color: $fg_color;
    border: 1px solid $borders_color;
    background: white;
    padding: 0;

    &:backdrop {
      color: $backdrop_fg_color;
      border-color: $backdrop_borders_color;
    }
  }

  .dialog-action-box { margin: 12px; }
}


/**********
 * Frames *
 **********/
frame > border,
.frame {
  box-shadow: none;
  margin: 0;
  padding: 0;
  border-radius: 0;
  border: 1px solid $borders_color;

  &.flat { border-style: none; }

  &:backdrop { border-color: $backdrop_borders_color; }
}

actionbar > revealer >  box {
  padding: 6px;
  border-top: 1px solid $borders_color;

  &:backdrop { border-color: $backdrop_borders_color; }
}

scrolledwindow {
  viewport > list,
  viewport > stack list {
    background-color: $sidebar_bg_color;
    &:backdrop { background-color: $backdrop_sidebar_bg_color; }
  }
  viewport.frame { // avoid double borders when viewport inside scrolled window
    border-style: none;
  }

  // This is used when content is touch-dragged past boundaries.
  // draws a box on top of the content, the size changes programmatically.
  overshoot {
    &.top {
      @include overshoot(top);

      &:backdrop { @include overshoot(top, backdrop); }
    }

    &.bottom {
      @include overshoot(bottom);

      &:backdrop { @include overshoot(bottom, backdrop); }
    }

    &.left {
      @include overshoot(left);

      &:backdrop { @include overshoot(left, backdrop); }
    }

    &.right {
      @include overshoot(right);

      &:backdrop { @include overshoot(right, backdrop); }
    }
  }

  // Overflow indication, works similarly to the overshoot, the size if fixed tho.
  undershoot {
    &.top { @include undershoot(top); }

    &.bottom { @include undershoot(bottom); }

    &.left { @include undershoot(left); }

    &.right { @include undershoot(right); }
  }

  junction { // the small square between two scrollbars
    border-color: transparent;
    // the border image is used to add the missing dot between the borders, details, details, details...
    border-image: linear-gradient(to bottom, $borders_color 1px, transparent 1px) 0 0 0 1 / 0 1px stretch;
    background-color: $scrollbar_bg_color;

    &:dir(rtl) { border-image-slice: 0 1 0 0; }

    &:backdrop {
      border-image-source: linear-gradient(to bottom, $backdrop_borders_color 1px, transparent 1px);
      background-color: $backdrop_scrollbar_bg_color;
      transition: $backdrop_transition;
    }
  }
}

//vbox and hbox separators
separator {
  background: transparentize($borders_color, 0.85);
  min-width: 1px;
  min-height: 1px;
}

/*********
 * Lists *
 *********/
list {
  color: $text_color;
  background-color: $base_color;
  border-color: $borders_color;

  &:backdrop {
    background-color: $backdrop_base_color;
    border-color: $backdrop_borders_color;
  }

  row { padding: 2px; }

  separator {
    // separator within sidebar
    background-color: transparentize($borders_color, 0.5);
  }
}

row {
  outline-offset: 0;
  transition: all 150ms $ease-out-quad;

  &:not(:selected) {
    &:not(:backdrop):hover { background-color: $base_hover_color; }
    &:not(:backdrop):active { background-color: $base_active_color; }
  }

  &:backdrop { transition: $backdrop_transition; }

  &.activatable:not(:backdrop) {
    &.has-open-popup, // this is for indicathing which row generated a popover see https://bugzilla.gnome.org/show_bug.cgi?id=754411

    &:active { box-shadow: inset 0 2px 2px -2px transparentize(black, 0.8); }

    &:not(:backdrop):selected {
      &:active { box-shadow: inset 3px 0 $selected_bg_color, inset 0 2px 3px -1px transparentize(black, 0.5); }

      &.has-open-popup { background-color: mix($fg_color, $selected_bg_color, 10%); }

    }
  }

  &:selected { @extend %selected_items; }
}


/*********************
 * App Notifications *
 *********************/
.app-notification,
.app-notification.frame {
  padding: 10px;
  margin: 12px;
  color: $text_color;
  border-radius: $medium_radius;
  background-color: $menu_color;
  border: 1px solid $borders_color;
  box-shadow: $popover_shadow;

  &:backdrop {
    background-color: $backdrop_bg_color;
    color: $backdrop_text_color;
    box-shadow: none;
    transition: $backdrop_transition;
  }

  button.flat:hover {
      @include button(hover, $menu_color);
      border-color: $borders_color;
  }

  border { border: none; }
}
/* ... */

